pruebas boton fight

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -52,3 +52,7 @@ h4{
     font-size: large;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+#fight{
+    width: 1em;
+    height: 1em;
+}
