--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,21 +1,29 @@
 body {
-    background: #f7bdb3;
+    background: #e7e3e2;
 }
 
-h2{
+.letra{
     display: flex;
     justify-content: center;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    
 }
 h4{
     display: flex;
     justify-content: center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;  
+    color: #dd417c;
+}
+.nombres{
+    display: flex;
+    justify-content: space-evenly;
+    
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;  
 }
 
 #players{
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
+
     margin: 3em;
     
 
@@ -52,7 +60,16 @@ h4{
     font-size: large;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
-#fight{
-    width: 1em;
-    height: 1em;
+.start{
+    width: 7em;
+    height: 3em;
+    background-color: #ba4568;
+   position: relative;
+   top: auto;
+   left: 43em;
+   color: #f7bdb3;
+}
+
+.segundaPantalla{
+    display: none;
 }
